[package]
name = "sc2pathlib"
version = "0.3.1"
edition = "2018"

[lib]
bench = false
name = "sc2pathlib"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.13.2"

[dependencies]
pathfinding = "2.0.4"

[dev-dependencies]
criterion = "0.3.4"


[[bench]]
name = "path_benchmark"
harness = false
# [profile.release]
# opt-level = 3
# debug=false
# panic="abort"
# lto = "fat"
# codegen-units = 1

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]