[package]
name = "sc2pathlib"
version = "0.5.0"
edition = "2018"
authors = []
[lib]
bench = false
name = "sc2pathlib"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.17.3"
features = ["multiple-pymethods"]

[dependencies]
pathfinding = "4.2.0"
arrayvec = "0.7.0"

[dev-dependencies]
criterion = "0.3.4"


[[bench]]
name = "path_benchmark"
harness = false

 [profile.release]
 opt-level = 3
 debug=false
# panic="abort"
# lto = "fat"
# codegen-units = 1

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]